--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,43 @@
 .TravelForm {
-    padding: 20px;
+    align-items: end;
+}
+
+input {
+    width: 100%;
+    padding: 5px;
+    margin: 8px 0;
+}
+
+select {
+    width: 100%;
+    padding: 5px;
+    margin: 8px 0;
+}
+
+button {
+    border: none;
+    padding: 10px;
 }
 
 .Submit {
-    margin-top: 5px;
-    padding: 5px;
+    margin-top: 10px;
+    color: white;
+    background-color: darkcyan;
+    
+}
+.Success,
+.Error {
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 3px 3px 3px 3px;
 }
 
-h1 {
-    padding-left: 20px;
+.Success {
+    color: #270;
+    background-color: #DFF2BF;
+}
+
+.Error {
+    color: #D8000C;
+    background-color: #FFBABA;
 }
